# hand_steer_sim

./: CMakeLists.txt  README.md  package.xml  record_data.py  record_data_gesture.py  record_data_steering.py  record_data_steering_stuck.py  record_data_steering_trial.py  setup.py
config/: diffdrive.yaml
hand_steer_sim/: __init__.py  dispatcher.py  gesture_recognition.py
hand_steer_sim/model/: __init__.py
hand_steer_sim/model/keypoint_classifier/: __init__.py  keypoint_classifier.tflite
hand_steer_sim/model/notebooks/: keypoint_classification.ipynb
hand_steer_sim/model/static_mode/: __init__.py  gesture_recognition.py
hand_steer_sim/model/static_mode/keypoint_classifier/: keypoint_classifier.hdf5  keypoint_classifier.tflite
hand_steer_sim/model/static_mode/notebooks/: keypoint_classification.ipynb  point_history_classification.ipynb
hand_steer_sim/model/static_mode/point_history_classifier/: point_history_classifier.hdf5
hand_steer_sim/model/steering_mode/: __init__.py  steering_recognition.py
hand_steer_sim/model/steering_mode/keypoint_classifier/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv
hand_steer_sim/model/steering_mode/notebooks/: keypoint_classification.ipynb  point_history_classification.ipynb
hand_steer_sim/model/steering_mode/point_history_classifier/: __init__.py  point_history.csv  point_history_classifier.hdf5  point_history_classifier.py  point_history_classifier.tflite  point_history_classifier_label.csv
launch/: camera_interface.launch  drive_car.launch  drive_robot.launch  gesture_recognition.launch  my_cam.launch  show_robot.launch  sign_control.launch
scripts/: camera_publisher_node.py  cvfpscalc.py  gesture_to_twist_node.py  hand_sign_recognition_node.py  steering_sign_recognition_node.py  wheel_to_twist_node.py
src/: gesture_recognition.py  hand_sign_recognition.py  image_publisher_launch.py  sign_to_controller.py
src/model/keypoint_classifier/: keypoint_classifier.hdf5
src/notebooks/: keypoint_classification.ipynb
urdf/: mobile_robot.urdf  mobile_robot.urdf.xacro
